<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edf5e1"
    tools:context=".Perfil">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="136dp"
        android:layout_height="134dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/foto_perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/foto_perfil" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/txtNombre"
        android:textColor="#05386B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />

    <ImageView
        android:id="@+id/imgGithub"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBackground"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/github_icon" />


    <TextView
        android:id="@+id/txtGithub"
        android:layout_width="164dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:autoLink="web"
        android:fontFamily="@font/advent_pro_semibold"
        android:linksClickable="true"
        android:text="@string/txtGithub"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgGithub"
        app:layout_constraintTop_toBottomOf="@+id/imgBackground"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtMail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:autoLink="email"
        android:fontFamily="@font/advent_pro_semibold"
        android:linksClickable="true"
        android:text="@string/txtMail"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgMail"
        app:layout_constraintTop_toBottomOf="@+id/txtGithub"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgMail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGithub"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icono_mail" />

</android.support.constraint.ConstraintLayout>